tests/machine/x/rust/group_by_multi_join_sort.error
line 0: compile: exit status 1
error[E0277]: cannot subtract `f64` from `{integer}`
  --> /workspace/mochi/tests/machine/x/rust/group_by_multi_join_sort.rs:81:939
   |
81 | ...().items { tmp4.push(x.l.l_extendedprice * (1 - x.l.l_discount)); } tmp4 })).partial_cmp(&(-sum(&{ let mut tmp4 = Vec::new();for x in ...
   |                                                  ^ no implementation for `{integer} - f64`
   |
   = help: the trait `Sub<f64>` is not implemented for `{integer}`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&f128` implements `Sub<f128>`
             `&f128` implements `Sub`
             `&f16` implements `Sub<f16>`
             `&f16` implements `Sub`
             `&f32` implements `Sub<f32>`
             `&f32` implements `Sub`
             `&f64` implements `Sub<f64>`
             `&f64` implements `Sub`
           and 56 others

error[E0277]: cannot subtract `f64` from `{integer}`
  --> /workspace/mochi/tests/machine/x/rust/group_by_multi_join_sort.rs:81:1081
   |
81 | ...().items { tmp4.push(x.l.l_extendedprice * (1 - x.l.l_discount)); } tmp4 }))).unwrap()); let mut result = Vec::new(); for g in tmp2 { ...
   |                                                  ^ no implementation for `{integer} - f64`
   |
   = help: the trait `Sub<f64>` is not implemented for `{integer}`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&f128` implements `Sub<f128>`
             `&f128` implements `Sub`
             `&f16` implements `Sub<f16>`
             `&f16` implements `Sub`
             `&f32` implements `Sub<f32>`
             `&f32` implements `Sub`
             `&f64` implements `Sub<f64>`
             `&f64` implements `Sub`
           and 56 others

error[E0277]: cannot subtract `f64` from `{integer}`
  --> /workspace/mochi/tests/machine/x/rust/group_by_multi_join_sort.rs:81:1345
   |
81 | ...().items { tmp5.push(x.l.l_extendedprice * (1 - x.l.l_discount)); } tmp5 }), c_acctbal: g.key.c_acctbal, n_name: g.key.n_name, c_addre...
   |                                                  ^ no implementation for `{integer} - f64`
   |
   = help: the trait `Sub<f64>` is not implemented for `{integer}`
   = help: the following other types implement trait `Sub<Rhs>`:
             `&f128` implements `Sub<f128>`
             `&f128` implements `Sub`
             `&f16` implements `Sub<f16>`
             `&f16` implements `Sub`
             `&f32` implements `Sub<f32>`
             `&f32` implements `Sub`
             `&f64` implements `Sub<f64>`
             `&f64` implements `Sub`
           and 56 others

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]